# clones-fe

./: .replit  Pasted-EBUG-botocore-regions-Calling-endpoint-provider-with-parameters-Region-us-east-1-UseFIPS--1729088030946.txt  app.py  models.py  pyproject.toml  replit.nix  test_s3_upload.py
instance/: videos.db
static/css/: tailwind.css
static/js/: main.js
templates/: 404.html  dashboard.html  gallery.html  index.html  login.html  profile.html  register.html
utils/: video_processor.py  youtube_api.py
