[project]
name = "repl-nix-videofusionapp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "gunicorn>=23.0.0",
    "google-api-python-client>=2.149.0",
    "boto3>=1.35.40",
    "flask-login>=0.6.3",
    "psutil>=6.0.0",
    "isodate>=0.7.2",
    "moviepy>=1.0.3",
    "pillow>=11.0.0",
    "flask-cors>=5.0.0",
]
